--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,11 @@ jspm_packages
 # Yarn Integrity file
 .yarn-integrity
 
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
