--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "require-dir": "^0.3.0",
     "spectron": "^3.4.0",
     "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1",
     "tree-kill": "^1.1.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.2",
