--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,9 @@
   "description": "An electron-vue project",
   "main": "electron.js",
   "dependencies": {
+    "bluebird": "^3.4.6",
+    "fs-extra": "^1.0.0",
+    "lodash": "^4.17.2",
     "vue": "^2.0.1",
     "vue-electron": "^1.0.0",
     "vuex": "^2.0.0"
