--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build:clean": "cross-env PLATFORM_TARGET=clean node tasks/release.js",
     "build:darwin": "cross-env PLATFORM_TARGET=darwin node tasks/release.js",
     "build:linux": "cross-env PLATFORM_TARGET=linux node tasks/release.js",
-    "build:mas": "cross-env PLATFORM_TARGET=mas node tasks/release.js",
     "build:win32": "cross-env PLATFORM_TARGET=win32 node tasks/release.js",
     "dev": "node tasks/runner.js",
     "e2e": "npm run pack && mocha test/e2e",
@@ -16,7 +15,8 @@
     "pack": "cross-env NODE_ENV=production webpack -p --progress --colors",
     "test": "npm run unit && npm run e2e",
     "unit": "karma start test/unit/karma.conf.js",
-    "postinstall": "npm run lint:fix && cd app && npm install"
+    "postinstall": "npm run lint:fix && cd app && npm install",
+    "setup": "node tasks/setup-dependencies.js"
   },
   "author": "Greg Holguin <simulatedgreg@gmail.com>",
   "license": "MIT",
@@ -34,6 +34,7 @@
     "css-loader": "^0.23.1",
     "del": "^2.2.1",
     "devtron": "^1.1.0",
+    "download": "^5.0.2",
     "electron": "^1.3.1",
     "electron-devtools-installer": "^1.1.4",
     "electron-packager": "^8.0.0",
@@ -57,6 +58,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.8.0",
+    "lodash": "^4.17.2",
     "mocha": "^3.0.2",
     "require-dir": "^0.3.0",
     "spectron": "^3.4.0",
