--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "npm run unit && npm run e2e",
     "unit": "karma start test/unit/karma.conf.js",
     "postinstall": "npm run lint:fix && cd app && npm install",
-    "setup": "node tasks/setup-dependencies.js"
+    "setup": "node tasks/dependencies/setup.js"
   },
   "author": "Greg Holguin <simulatedgreg@gmail.com>",
   "license": "MIT",
@@ -46,6 +46,8 @@
     "eslint-plugin-html": "^1.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "fs-extra": "^1.0.0",
+    "glob": "^7.1.1",
     "html-webpack-plugin": "^2.16.1",
     "inject-loader": "^2.0.1",
     "isparta-loader": "^2.0.0",
