--- a/package.json
+++ b/package.json
@@ -15,67 +15,57 @@
     "pack": "cross-env NODE_ENV=production webpack -p --progress --colors",
     "test": "npm run unit && npm run e2e",
     "unit": "karma start test/unit/karma.conf.js",
-    "postinstall": "npm run lint:fix && cd app && npm install",
+    "postinstall": "cd app && npm install",
     "setup": "node tasks/dependencies/setup.js"
   },
   "author": "Greg Holguin <simulatedgreg@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.8.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.14.0",
-    "babel-runtime": "^6.6.1",
     "chai": "^3.5.0",
-    "cross-env": "^1.0.7",
-    "css-loader": "^0.23.1",
-    "del": "^2.2.1",
-    "devtron": "^1.1.0",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.26.1",
+    "devtron": "^1.4.0",
     "download": "^5.0.2",
-    "electron": "^1.3.1",
-    "electron-devtools-installer": "^1.1.4",
-    "electron-packager": "^8.0.0",
-    "electron-prebuilt": "^1.4.6",
-    "electron-rebuild": "^1.1.3",
-    "eslint": "^2.10.2",
-    "eslint-friendly-formatter": "^2.0.5",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-html": "^1.3.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
+    "electron": "^1.4.12",
+    "electron-devtools-installer": "^2.0.1",
+    "electron-packager": "^8.4.0",
+    "electron-rebuild": "^1.4.0",
+    "eslint": "^3.12.0",
+    "eslint-friendly-formatter": "^2.0.6",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-html": "^1.7.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "file-loader": "^0.9.0",
     "fs-extra": "^1.0.0",
     "glob": "^7.1.1",
-    "html-webpack-plugin": "^2.16.1",
-    "inject-loader": "^2.0.1",
+    "html-webpack-plugin": "^2.24.1",
     "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
-    "karma-electron": "^4.1.1",
-    "karma-mocha": "^1.2.0",
+    "karma-electron": "^5.1.1",
+    "karma-mocha": "^1.3.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.8.0",
     "lodash": "^4.17.2",
-    "mocha": "^3.0.2",
-    "require-dir": "^0.3.0",
+    "mocha": "^3.2.0",
+    "require-dir": "^0.3.1",
     "spectron": "^3.4.0",
+    "strict-loader": "^1.1.0",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^2.3.1",
+    "stylus-loader": "^2.4.0",
     "tree-kill": "^1.1.0",
     "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^1.3.2",
-    "vue-html-loader": "^1.2.2",
-    "vue-loader": "^9.5.1",
+    "vue-hot-reload-api": "^2.0.6",
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^10.0.2",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.14.1"
+    "vue-template-compiler": "^2.1.4",
+    "webpack": "^2.1.0-beta.27",
+    "webpack-dev-server": "^2.1.0-beta.12"
   },
   "dependencies": {}
 }
