--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "electron-packager": "^8.4.0",
     "electron-rebuild": "^1.4.0",
     "eslint": "^3.12.0",
+    "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.6",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-html": "^1.7.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "fs-extra": "^1.0.0",
