Add Tape testing boilerplate

--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "build:linux": "cross-env PLATFORM_TARGET=linux node tasks/release.js",
     "build:win32": "cross-env PLATFORM_TARGET=win32 node tasks/release.js",
     "dev": "node tasks/runner.js",
-    "e2e": "npm run pack && mocha test/e2e",
     "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter app test",
     "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix app test",
-    "pack": "cross-env NODE_ENV=production webpack -p --progress --colors",
-    "test": "npm run unit && npm run e2e",
-    "unit": "karma start test/unit/karma.conf.js",
+    "pack": "cross-env NODE_ENV=production webpack --progress --colors",
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:e2e": "npm run pack && node test/e2e",
+    "test:unit": "webpack --config test/boilerplate/unit/webpack.config.js && electron test/boilerplate/unit/runner.js | faucet",
     "postinstall": "cd app && npm install",
     "setup": "node tasks/dependencies/setup.js"
   },
   "author": "Greg Holguin <simulatedgreg@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "chai": "^3.5.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.1",
     "devtron": "^1.4.0",
@@ -38,28 +37,30 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "faucet": "0.0.1",
     "file-loader": "^0.9.0",
     "fs-extra": "^1.0.0",
     "glob": "^7.1.1",
     "html-webpack-plugin": "^2.24.1",
-    "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
     "karma": "^1.3.0",
-    "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
     "karma-electron": "^5.1.1",
-    "karma-mocha": "^1.3.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
+    "karma-tap": "^3.1.1",
     "karma-webpack": "^1.8.0",
     "lodash": "^4.17.2",
-    "mocha": "^3.2.0",
+    "nodeunit": "^0.10.2",
+    "qunitjs": "^2.1.0",
     "require-dir": "^0.3.1",
     "spectron": "^3.4.0",
     "strict-loader": "^1.1.0",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
+    "tape": "^4.6.3",
+    "tape-catch": "^1.0.6",
+    "through": "^2.3.8",
     "tree-kill": "^1.1.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^2.0.6",
