--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "fs-extra": "^1.0.0",
     "lodash": "^4.17.2",
+    "minimatch": "^3.0.3",
+    "pluralize": "^3.1.0",
     "vue": "^2.0.1",
     "vue-electron": "^1.0.0",
     "vuex": "^2.0.0"
